--- a/zola/templates/docs/page.html
+++ b/zola/templates/docs/page.html
@@ -18,6 +18,7 @@
 	  {{ macros_toc::docs_toc(page=page) }}
       <main class="docs-content col-lg-11 col-xl-9">
         <p>{{ page.title | safe }}</p>
+	<p>test please work</p>
         {% if page.extra.lead %}<p class="lead">{{ page.extra.lead | safe }}</p>{% endif %}
         {{ page.content | safe }}
         {% if config.extra.edit_page %}
