added image embeds possibly

--- a/zola/templates/docs/page.html
+++ b/zola/templates/docs/page.html
@@ -11,6 +11,7 @@
 {% endblock header %}
 
 {% block content %}
+<meta content="https://rwtechwiki.github.io/docs/files/{$page.title}-header.gif" property="og:image" />
 <div class="wrap container" role="document">
   <div class="content">
     <div class="row flex-xl-nowrap">
