fixed/testing embed gif

--- a/zola/templates/docs/page.html
+++ b/zola/templates/docs/page.html
@@ -1,5 +1,12 @@
 {% extends "page.html" %}
 
+<title>The Rain World Tech Wiki</title>
+<meta content="A Proper Epic Embed Test Text Title" property="og:title" />
+<meta content="Now with embed gifs! :) Page title is {$page.title}." property="og:description" />
+<meta content="https://rwtechwiki.github.io/docs/files/{$page.title}-header.gif" property="og:image" />
+<meta content="#A4A4FF" data-react-helmet="true" name="theme-color" />
+<meta name="twitter:card" content="summary_large_image">
+
 {% block body %}
   {% set page_class = "docs single" %}
 {% endblock body %}
@@ -11,7 +18,6 @@
 {% endblock header %}
 
 {% block content %}
-<meta content="https://rwtechwiki.github.io/docs/files/{$page.title}-header.gif" property="og:image" />
 <div class="wrap container" role="document">
   <div class="content">
     <div class="row flex-xl-nowrap">
