--- a/zola/templates/docs/page.html
+++ b/zola/templates/docs/page.html
@@ -24,6 +24,7 @@
 	  {{ macros_sidebar::docs_sidebar(current_section=current_section) }}
 	  {{ macros_toc::docs_toc(page=page) }}
       <main class="docs-content col-lg-11 col-xl-9">
+	{{ page.title }}
         {{ page.content | safe }}
         {% if config.extra.edit_page %}
           {{ macros_edit_page::docs_edit_page(current_path=current_path) }}
