removed complexity so maybe it works

--- a/zola/templates/docs/page.html
+++ b/zola/templates/docs/page.html
@@ -3,7 +3,7 @@
 <title>The Rain World Tech Wiki</title>
 <meta content="A Proper Epic Embed Test Text Title" property="og:title" />
 <meta content="Now with embed gifs! :) Page title is {$page.title}." property="og:description" />
-<meta content="https://rwtechwiki.github.io/docs/files/{$page.title}-header.gif" property="og:image" />
+<meta content="https://rwtechwiki.github.io/docs/files/crawlturn-header.gif" property="og:image" />
 <meta content="#A4A4FF" data-react-helmet="true" name="theme-color" />
 <meta name="twitter:card" content="summary_large_image">
 
