added image to embeds????

--- a/zola/templates/macros/head.html
+++ b/zola/templates/macros/head.html
@@ -74,9 +74,10 @@
   <meta name="twitter:creator" content="@{{ config.extra.open.twitter_creator }}">
   
   <meta property="og:title" content="{{ title }}">
-  <meta property="og:description" content="{{ description }}">
+  <meta property="og:description" content="{{ description }} khsdgjskhksjghkj">
   <meta property="og:type" content="{{ type }}">
   <meta property="og:url" content="{{ page_url | safe }}">
+  <meta property="og:image" content="https://rwtechwiki.github.io/docs/files/crawlturn-header.gif" />
 
   {% if page.extra.images %}
     {% for image in page.extra.images %}
