--- a/zola/templates/macros/head.html
+++ b/zola/templates/macros/head.html
@@ -67,9 +67,9 @@
 
 {% if config.extra.open.enable %}
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="{{ config.base_url | safe }}/{{ config.extra.open.image }}">
+  <meta name="twitter:image" content="https://rwtechwiki.github.io/docs/files/crawlturn-header.gif">
   <meta name="twitter:title" content="{{ title }}">
-  <meta name="twitter:description" content="{{ description }}">
+  <meta name="twitter:description" content="{{ description }} ksjdghkljsdhfkjslhgsd">
   <meta name="twitter:site" content="@{{ config.extra.open.twitter_site }}">
   <meta name="twitter:creator" content="@{{ config.extra.open.twitter_creator }}">
   
@@ -77,7 +77,7 @@
   <meta property="og:description" content="{{ description }} khsdgjskhksjghkj">
   <meta property="og:type" content="{{ type }}">
   <meta property="og:url" content="{{ page_url | safe }}">
-  <meta property="og:image" content="https://rwtechwiki.github.io/docs/files/crawlturn-header.gif" />
+  <meta property="og:image" content="https://rwtechwiki.github.io/docs/files/crawlturn-header.gif">
 
   <meta property="og:updated_time" content="{{ updated_time }}">
   <meta property="og:site_name" content="{{ title }}">
