--- a/zola/templates/macros/head.html
+++ b/zola/templates/macros/head.html
@@ -32,7 +32,7 @@
 {% macro seo(
   title="",
   title_addition="",
-  description="",
+  description="testing nonblank head description",
   type="website",
   is_home=false,
   is_404=false,
@@ -65,40 +65,38 @@
 <meta name="description" content="{{ description }}">
 <link rel="canonical" href="{{ page_url | safe }}">
 
-{% if config.extra.open.enable %}
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="https://rwtechwiki.github.io/docs/files/crawlturn-header.gif">
-  <meta name="twitter:title" content="{{ title }}">
-  <meta name="twitter:description" content="{{ description }} ksjdghkljsdhfkjslhgsd">
-  <meta name="twitter:site" content="@{{ config.extra.open.twitter_site }}">
-  <meta name="twitter:creator" content="@{{ config.extra.open.twitter_creator }}">
-  
-  <meta property="og:title" content="{{ title }}">
-  <meta property="og:description" content="{{ description }} khsdgjskhksjghkj">
-  <meta property="og:type" content="{{ type }}">
-  <meta property="og:url" content="{{ page_url | safe }}">
-  <meta property="og:image" content="https://rwtechwiki.github.io/docs/files/crawlturn-header.gif">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="https://rwtechwiki.github.io/docs/files/crawlturn-header.gif">
+<meta name="twitter:title" content="{{ title }}">
+<meta name="twitter:description" content="{{ description }} ksjdghkljsdhfkjslhgsd">
+<meta name="twitter:site" content="@{{ config.extra.open.twitter_site }}">
+<meta name="twitter:creator" content="@{{ config.extra.open.twitter_creator }}">
 
-  <meta property="og:updated_time" content="{{ updated_time }}">
-  <meta property="og:site_name" content="{{ title }}">
+<meta property="og:title" content="{{ title }}">
+<meta property="og:description" content="{{ description }} khsdgjskhksjghkj">
+<meta property="og:type" content="{{ type }}">
+<meta property="og:url" content="{{ page_url | safe }}">
+<meta property="og:image" content="https://rwtechwiki.github.io/docs/files/crawlturn-header.gif">
 
-  {% if config.extra.open.audio %}
-    <meta property="og:audio" content="{{ config.extra.open.audio }}">
-  {% endif %}
+<meta property="og:updated_time" content="{{ updated_time }}">
+<meta property="og:site_name" content="{{ title }}">
 
-  {% if config.extra.open.locale %}
-    <meta property="og:locale" content="{{ config.extra.open.locale }}">
-  {% endif %}
-
-  {% if config.extra.open.videos %}
-    {% for video in config.extra.open.videos %}
-      <meta property="og:video" content="{{ get_url(path=video) }}">
-    {% endfor %}
-  {% endif %}
-  <meta property="article:publisher" content="https://www.facebook.com/{{ config.extra.open.facebook_publisher }}">
-  <meta property="article:author" content="https://www.facebook.com/{{ config.extra.open.facebook_author }}">
-  <meta property="og:locale" content="{{ config.extra.open.og_locale }}">
+{% if config.extra.open.audio %}
+<meta property="og:audio" content="{{ config.extra.open.audio }}">
 {% endif %}
+
+{% if config.extra.open.locale %}
+<meta property="og:locale" content="{{ config.extra.open.locale }}">
+{% endif %}
+
+{% if config.extra.open.videos %}
+{% for video in config.extra.open.videos %}
+<meta property="og:video" content="{{ get_url(path=video) }}">
+{% endfor %}
+{% endif %}
+<meta property="article:publisher" content="https://www.facebook.com/{{ config.extra.open.facebook_publisher }}">
+<meta property="article:author" content="https://www.facebook.com/{{ config.extra.open.facebook_author }}">
+<meta property="og:locale" content="{{ config.extra.open.og_locale }}">
 
 {% if is_home and config.extra.schema %}
   {% if config.extra.schema.type == "Organization" %}
