--- a/zola/templates/macros/head.html
+++ b/zola/templates/macros/head.html
@@ -32,7 +32,7 @@
 {% macro seo(
   title="",
   title_addition="",
-  description="testing nonblank head description",
+  description="",
   type="website",
   is_home=false,
   is_404=false,
@@ -66,15 +66,12 @@
 <link rel="canonical" href="{{ page_url | safe }}">
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https://rwtechwiki.github.io/docs/files/crawlturn-header.gif">
+<meta name="twitter:image" content="https://rwtechwiki.github.io/docs/files/{{ title }}.gif">
 <meta name="twitter:title" content="{{ title }}">
-<meta name="twitter:description" content="{{ description }} ksjdghkljsdhfkjslhgsd">
 
 <meta property="og:title" content="{{ title }}">
-<meta property="og:description" content="{{ description }} khsdgjskhksjghkj">
 <meta property="og:type" content="{{ type }}">
 <meta property="og:url" content="{{ page_url | safe }}">
-<meta property="og:image" content="https://rwtechwiki.github.io/docs/files/crawlturn-header.gif">
 
 <meta property="og:updated_time" content="{{ updated_time }}">
 <meta property="og:site_name" content="{{ title }}">
