--- a/zola/templates/macros/head.html
+++ b/zola/templates/macros/head.html
@@ -66,12 +66,12 @@
 <link rel="canonical" href="{{ page_url | safe }}">
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https://rwtechwiki.github.io/docs/files/{{ title }}.gif">
 <meta name="twitter:title" content="{{ title }}">
 
-<meta property="og:title" content="{{ title }}">
+<meta property="og:title" content="{{ page.title }}">
 <meta property="og:type" content="{{ type }}">
 <meta property="og:url" content="{{ page_url | safe }}">
+<meta name="og:image" content="https://rwtechwiki.github.io/docs/files/{{ page.title }}.gif">
 
 <meta property="og:updated_time" content="{{ updated_time }}">
 <meta property="og:site_name" content="{{ title }}">
