--- a/zola/templates/macros/head.html
+++ b/zola/templates/macros/head.html
@@ -71,7 +71,7 @@
 <meta property="og:title" content="{{ page.title }}">
 <meta property="og:type" content="{{ type }}">
 <meta property="og:url" content="{{ page_url | safe }}">
-<meta name="og:image" content="https://rwtechwiki.github.io/docs/files/{{ page.title }}.gif">
+<meta property="og:image" content="https://rwtechwiki.github.io/docs/files/{{ page.title }}.gif">
 
 <meta property="og:updated_time" content="{{ updated_time }}">
 <meta property="og:site_name" content="{{ title }}">
