--- a/zola/templates/macros/head.html
+++ b/zola/templates/macros/head.html
@@ -67,6 +67,7 @@
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="{{ title }}">
+<meta name="twitter:image" content="https://rwtechwiki.github.io/docs/files/{{ page.title }}.gif">
 
 <meta property="og:title" content="{{ page.title }}">
 <meta property="og:type" content="{{ type }}">
