--- a/zola/templates/macros/head.html
+++ b/zola/templates/macros/head.html
@@ -74,7 +74,7 @@
 <meta property="og:description" content="{{ description }}">
 <meta property="og:type" content="{{ type }}">
 <meta property="og:url" content="{{ page_url | safe }}">
-<meta property="og:image" content="https://rwtechwiki.github.io/docs/files/{{ page.title }}.gif">
+<meta property="og:image" content="https://rwtechwiki.github.io/docs/files/slide_header.gif">
 
 <meta property="og:updated_time" content="{{ updated_time }}">
 <meta property="og:site_name" content="{{ title }}">
