--- a/zola/templates/macros/head.html
+++ b/zola/templates/macros/head.html
@@ -66,7 +66,7 @@
 <link rel="canonical" href="{{ page_url | safe }}">
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="{{ config.base_url | safe }}/{{ config.extra.open.image }}">
+<meta name="twitter:image" content="https://rwtechwiki.github.io/docs/files/slide_header.gif">
 <meta name="twitter:title" content="{{ title }}">
 <meta name="twitter:description" content="{{ description }}">
 
