--- a/zola/templates/macros/head.html
+++ b/zola/templates/macros/head.html
@@ -70,7 +70,7 @@
 <meta name="twitter:title" content="{{ title }}">
 <meta name="twitter:description" content="{{ description }}">
 
-<meta property="og:title" content="{{ page.title }}">
+<meta property="og:title" content="{{ title }}">
 <meta property="og:description" content="{{ description }}">
 <meta property="og:type" content="{{ type }}">
 <meta property="og:url" content="{{ page_url | safe }}">
