--- a/zola/templates/macros/head.html
+++ b/zola/templates/macros/head.html
@@ -62,19 +62,19 @@
 	{% set page_path = "/404.html" %}
 {% endif %}
 <title>{{ title }}{{ title_addition }}{{ description }}</title>
-<meta name="description" content="{{ description }}">
+<meta name="description" content="the page for one of the moves in rain world 1">
 <link rel="canonical" href="{{ page_url | safe }}">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="https://rwtechwiki.github.io/docs/files/slide-header.gif">
 <meta name="twitter:title" content="{{ title }}">
-<meta name="twitter:description" content="{{ description }}">
+<meta name="twitter:description" content="the page for one of the moves in rain world 2">
 
 <meta property="og:title" content="{{ title }}">
-<meta property="og:description" content="{{ description }}">
+<meta property="og:description" content="the page for one of the moves in rain world 3">
 <meta property="og:type" content="{{ type }}">
 <meta property="og:url" content="{{ page_url | safe }}">
-<meta property="og:image" content="https://rwtechwiki.github.io/docs/files/slide-header.gif">
+<meta property="og:image" content="https://rwtechwiki.github.io/docs/files/flopping-embed.gif">
 
 <meta property="og:updated_time" content="{{ updated_time }}">
 <meta property="og:site_name" content="{{ title }}">
