--- a/zola/templates/macros/head.html
+++ b/zola/templates/macros/head.html
@@ -66,11 +66,11 @@
 <link rel="canonical" href="{{ page_url | safe }}">
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https://rwtechwiki.github.io/docs/files/slide-header.gif">
-<meta name="twitter:title" content="{{ title }}">
+<meta name="twitter:image" content="https://rwtechwiki.github.io/docs/files/flopping-embed.gif">
+<meta name="twitter:title" content="{{ title }} test title 2">
 <meta name="twitter:description" content="the page for one of the moves in rain world 2">
 
-<meta property="og:title" content="{{ title }}">
+<meta property="og:title" content="{{ title }} test title 3">
 <meta property="og:description" content="the page for one of the moves in rain world 3">
 <meta property="og:type" content="{{ type }}">
 <meta property="og:url" content="{{ page_url | safe }}">
