--- a/zola/templates/page.html
+++ b/zola/templates/page.html
@@ -27,8 +27,13 @@
   {% else %}
     {% set page_section = "" %}
   {% endif %}
+
+  {% if page.title %}
+    {% set header_gif_title = page.title ~ "-header" %}
+  {% endif %}
+
   
-  {{ macros_head::seo(title=title_addition, title_addition=title_addition, description=description, type="article", is_page=true, created_time=created_time, updated_time=updated_time, page_section=page_section) }}
+  {{ macros_head::seo(title=title_addition, title_addition=title_addition, description=description, type="article", is_page=true, created_time=created_time, updated_time=updated_time, page_section=page_section, header_gif_title=header_gif_title) }}
 {% endblock seo %}
   
 {% block body %}
