--- a/zola/templates/macros/head.html
+++ b/zola/templates/macros/head.html
@@ -63,16 +63,16 @@
 	{% set page_path = "/404.html" %}
 {% endif %}
 <title>{{ title }}{{ title_addition }}</title>
-<meta name="description" content="{{ description }}">
+<meta name="description" content="One of the moves in rain world 1">
 <link rel="canonical" href="{{ page_url | safe }}">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="https://rwtechwiki.github.io/docs/files/{{header_gif_title}}.gif">
 <meta name="twitter:title" content="{{ title }}">
-<meta name="twitter:description" content="{{description}}">
+<meta name="twitter:description" content="One of the moves in rain world 2">
 
 <meta property="og:title" content="{{ title }}">
-<meta property="og:description" content="{{description}}">
+<meta property="og:description" content="One of the moves in rain world 3">
 <meta property="og:type" content="{{ type }}">
 <meta property="og:url" content="{{ page_url | safe }}">
 <meta property="og:image" content="https://rwtechwiki.github.io/docs/files/{{header_gif_title}}.gif">
